[tool.poetry]
name = "adc-scraper"
version = "0.1.0"
description = ""
authors = ["Nakaya <eniehack@outlook.jp>"]
readme = "README.md"
packages = [{include = "adc_scraper"}]

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^4.9.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
